Add basic Google Cast infrastructure and libs

--- a/app/views/partials/footer.html
+++ b/app/views/partials/footer.html
@@ -1,4 +1,11 @@
     <div class="footer">
-        <p>&copy; 2014 GDG[x] and the GDG Viz Task Force - <a ng-href="http://developers.google.com" target="_blank">About</a></p>
-        <p>GDG[x] is an independent group; our activities and the opinions expressed on this Page should in no way be linked to Google, the corporation.</p>
+    	<div class="row">
+    		<div class="span6">
+		        <p>&copy; 2014 GDG[x] and the GDG Viz Task Force - <a ng-href="/about">About</a></p>
+		        <p>GDG[x] is an independent group; our activities and the opinions expressed on this Page should in no way be linked to Google, the corporation.</p>
+		    </div>
+		    <div class="span6 pull-right" style="text-align:right">
+		        <a href="https://chrome.google.com/webstore/detail/gdgx-satellite/mkocgjlgmonoobpghannondgloaelfdn" tagrget="_blank"><img src="images/cws.png"/></a>&nbsp;<img src="images/cast_ready.png"/>
+		    </div>
+		</div>
     </div>
