--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <base href="/">
-    <title></title>
+    <title>GDG[x] Groundcontrol</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -29,9 +29,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div ng-include="'partials/navbar'"></div>
     <div ng-view></div>
-    <div ng-include="'partials/footer'"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -50,6 +48,7 @@
     <![endif]-->
     <script src="/socket.io/socket.io.js"></script>
     <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
+    <script src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
 
     <!-- build:js(app) scripts/vendor.js -->
     <!-- bower:js -->
@@ -63,11 +62,15 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/services/utils.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/navbar.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/services/utils.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/cast.js"></script>
+    <script src="scripts/controllers/visualizations.js"></script>
+    <script src="scripts/controllers/campaigns.js"></script>
+    <script src="scripts/controllers/about.js"></script>
+    <script src="scripts/controllers/navbar.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
